--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "typescript-action",
-  "description": "GitHub Actions TypeScript template",
-  "version": "0.0.0",
-  "author": "",
+  "name": "rust-toolchain",
+  "description": "GitHub actions for installing rust toolchain",
+  "version": "0.1.0",
+  "author": "Aditya Kumar",
   "private": true,
-  "homepage": "https://github.com/actions/typescript-action",
+  "homepage": "https://github.com/as1100k/cargo-release",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/as1100k/cargo-release.git"
   },
   "bugs": {
     "url": "https://github.com/actions/typescript-action/issues"
   },
   "keywords": [
     "actions",
-    "node",
-    "setup"
+    "cargo",
+    "rust",
+    "workspace"
   ],
   "exports": {
     ".": "./dist/index.js"
   },
   "engines": {
-    "node": ">=21"
+    "node": ">=20"
   },
   "scripts": {
     "bundle": "npm run format:write && npm run package",
@@ -66,7 +67,8 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.11.1",
+    "@actions/exec": "^1.1.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
