Added `components` as inputs to specify which components to be installed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
         with:
           toolchain: stable
           profile: minimal
+          components: miri
 
       - name: Print Output
         id: output
