--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,8 @@ inputs:
   profile:
     description: 'Rust Profile to be installed'
     default: 'default'
+  components:
+    description: 'Rust Components to be installed'
 
 runs:
   using: node20
