--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "rust-toolchain",
+  "name": "@rs-workspace/-toolchain",
   "description": "GitHub actions for installing rust toolchain",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "Aditya Kumar",
-  "private": true,
+  "private": false,
   "homepage": "https://github.com/rs-workspace/rust-toolchain",
   "repository": {
     "type": "git",
