--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rs-workspace/-toolchain",
+  "name": "@rs-workspace/rust-toolchain",
   "description": "GitHub actions for installing rust toolchain",
   "version": "0.2.1",
   "author": "Aditya Kumar",
