--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "newLine": "lf"
+    "newLine": "lf",
+    "declaration": true,
+    "declarationDir": "./types"
   },
   "exclude": ["./dist", "./node_modules", "./__tests__", "./coverage"]
 }
