Revert last 3 commits.
The following commits were reverted
- 6c8070317b210c60215e181d411e64fc898c0ba9
- fbd68199425e34bd66772a95b41aa51fd7e877c2
- c631a49c8958775756fa25887b257c9cc7709c9c

--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@rs-workspace/rust-toolchain",
+  "name": "rust-toolchain",
   "description": "GitHub actions for installing rust toolchain",
-  "version": "0.2.1",
+  "version": "0.2.0",
   "author": "Aditya Kumar",
-  "private": false,
+  "private": true,
   "homepage": "https://github.com/rs-workspace/rust-toolchain",
-  "main": "./dist/index.js",
-  "types": "./dist/types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rs-workspace/rust-toolchain.git"
